Подавил некоторые предупреждения, связанные с версией java. Ввел каталог зависимостей libs.versions.toml